# Falcon-signature

./: .gitignore  README.md
chipwhisperer/: .gitignore  Cargo.toml  Makefile.inc  README.md  fpc_mul_traces.txt  fpc_mul_traces_masked.txt  leaktest.py  main.c  makefile  memory.x  rustlib.h  trace.py
chipwhisperer/.cargo/: config.toml
chipwhisperer/src/: fft.rs  fpc.rs  fpr_add.rs  fpr_mul.rs  lib.rs  norm.rs  sign.rs  sign_mod.rs  sign_mod_masked.rs  ursh.rs
falcon/: Cargo.toml  build.rs
falcon/c_code/: CMakeLists.txt  codec.c  common.c  falcon2.h  fft.c  fpr.c  inner.h  inner2.h  katrng.c  katrng2.c  katrng2.h  keygen.c  nist.c  rng.c  shake.c  sign.c  vrfy.c
falcon/src/: codec.rs  common.rs  falcon.rs  fft.rs  fpr.rs  gen_kat.rs  katrng.rs  keygen.rs  lib.rs  main.rs  main_test.rs  nist.rs  rng.rs  shake.rs  sign.rs  test_falcon.rs  vrfy.rs
falcon/src/falcon_c/: codec_c.rs  common_c.rs  fft_c.rs  fpr_c.rs  katrng2.rs  keygen_c.rs  nist_c.rs  rng_c.rs  shake_c.rs  sign_c.rs  test_falcon_c.rs  vrfy_c.rs
falcon/src/kat_tests/: mod.rs  test_falcon.rs
falcon/src/test/: codec_test.rs  common_test.rs  fft_test.rs  fpr_test.rs  katrng.rs  katrng_test.rs  keygen_test.rs  nist_test.rs  rng_test.rs  shake_test.rs  sign_test.rs  vrfy_test.rs
falcon/src/tests/: codec_test.rs  common_test.rs  fft_test.rs  fpr_test.rs  katrng_test.rs  keygen_test.rs  mod.rs  nist_test.rs  rng_test.rs  shake_test.rs  sign_test.rs  test_falcon.rs  vrfy_test.rs
falcon_c/: Cargo.toml  build.rs
falcon_c/src/: common_c.rs  fft_c.rs  keygen_c.rs  lib.rs  rng_c.rs  sign_c.rs  test_falcon_c.rs  vrfy_c.rs
falcon_c/src/c_code/: CMakeLists.txt  rng.c  shake.c
falcon_masked/: Cargo.toml
falcon_masked/src/: codec_masked.rs  common_masked.rs  falcon_masked.rs  fft_masked.rs  fft_masked_deep.rs  fpr_masked.rs  fpr_masked_deep.rs  keygen_masked.rs  lib.rs  random.rs  rng_masked.rs  sign_masked.rs  sign_masked_mask_sample.rs  vrfy_masked.rs
falcon_masked_test/: Cargo.toml  README.md
falcon_masked_test/src/: main.rs
falcon_masked_test/src/tests/: fft_masked_deep_test.rs  fft_masked_test.rs  fpr_masked_deep_test.rs  fpr_masked_test.rs  mod.rs  sign_masked_test.rs
falcon_test/: Cargo.toml  README.md
falcon_test/benches/: fpr_bench.rs  keygen_bench.rs  sign_bench.rs  sign_masked_bench.rs  vrfy_bench.rs
falcon_test/src/: katrng.rs  main.rs  nist.rs
falcon_test/src/c_code/: CMakeLists.txt  codec.c  common.c  sign.c  test_falcon.c
falcon_test/src/falcon_c/: common_c.rs  keygen_c.rs  rng_c.rs  sign_c.rs
falcon_test/src/kat_tests/: gen_kat.rs  test_falcon.rs
falcon_test/src/tests/: codec_test.rs  common_test.rs  fft_test.rs  fpr_test.rs  katrng_test.rs  keygen_test.rs  mod.rs  nist_test.rs  rng_test.rs  shake_test.rs  sign_test.rs  vrfy_test.rs
hawk/src/: main.rs
linktest/: Cargo.toml  main.c  rustheader.h
linktest/src/: lib.rs
ntru_gen/: Cargo.toml
ntru_gen/src/: falcon_ntru.rs  fxp.rs  gauss.rs  lib.rs  mp31.rs  ntru.rs  poly.rs  prng.rs  zint31.rs
ntru_gen_c/: Cargo.toml  build.rs
ntru_gen_c/src/: falcon_ntru.rs  fxp.rs  gauss.rs  lib.rs  mp31.rs  ntru.rs  poly.rs  prng.rs  zint31.rs
ntru_gen_c/src/c_code/: CMakeLists.txt  ng_falcon.c  ng_ntru.c
ntru_gen_test/: Cargo.toml
ntru_gen_test/src/: falcon_ntru.rs  fxp.rs  gauss.rs  main.rs  mp31.rs  mp31_test.rs  ntru.rs  poly.rs  prng.rs  zint31.rs
randomness/: Cargo.toml
randomness/src/: lib.rs  random.rs
