[package]
name = "chipwhisperer"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-alloc = "0.5.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
#cortex-m-rt = "0.7.3"
#critical-section = "1.1.1"
falcon = { path = "../falcon" }

[lib]
name = "rustlib"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

