[package]
name = "chipwhisperer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unmasked"

[dependencies]
embedded-alloc = "0.5.0"
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7.3", features = ["device"] }
stm32f3xx-hal = { version = "0.9.2", features = ["ld", "rt", "stm32f303xb"] }
panic-halt = "0.2.0"
bytemuck = "1.13.0"
falcon = { path = "../falcon" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

