[package]
name = "falcon_masked"
version = "1.0.0"
edition = "2021"


[dependencies]
embedded-hal = "0.2"
embedded-alloc = "0.5.0"
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f415"] }
bytemuck = "1.13.0"
rand_core = "0.6.4"
falcon = { path = "../falcon" }
randomness = { path = "../randomness", version="0.1.0", default-features = false, features = ["nostd"] }