[package]
name = "falcon_test"
version = "1.0.0"
edition = "2021"


[dependencies]
libc = "0.2"
aes = "0.8.2"
rand = "0.8.4"
hex = "0.4.3"
bytemuck = "1.13.0"
criterion = "0.4.0"
falcon = { path = "../falcon" }
falcon_c = { path = "../falcon_c" }
ntru_gen = { path = "../ntru_gen" }

[[bench]]
name = "keygen_bench"
harness = false

[[bench]]
name = "sign_bench"
harness = false

[[bench]]
name = "vrfy_bench"
harness = false